stretched images of members on team page were fixed

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1600,3 +1600,7 @@ section {
   font-size: 13px;
   color: #fff;
 }
+img.img-fluid {
+    object-fit: cover;
+    object-position: center center;
+}
